--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-    <button class="arrow" id="btn"><img src="assets/images/icon-arrow.svg"></button>
+    <button class="arrow" id="btn" aria-label="submit"><img src="assets/images/icon-arrow.svg" alt="submit"></button>
   </div>
   <script src="script.js"></script>
 </body>
